# distributed-ai-inference

distributed-ai-inference/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
distributed-ai-inference/client/: client.cpp
distributed-ai-inference/include/core/: onnx_runtime_engine.h
distributed-ai-inference/include/governance/: service_registry.h
distributed-ai-inference/include/service/: inference_service_impl.h
distributed-ai-inference/include/utils/: batch_processor.h  memory_pool.h
distributed-ai-inference/nginx/: nginx.conf
distributed-ai-inference/src/: main.cpp
distributed-ai-inference/src/core/: onnx_runtime_engine.cpp
distributed-ai-inference/src/governance/: service_registry.cpp
distributed-ai-inference/src/proto/: inference_service.proto
distributed-ai-inference/src/service/: inference_service_impl.cpp
